==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/Nordic/tommRoCHwTemplateBusEnvironmentSPIMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentSPIMaster.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/spi/master/tommRoCHwTemplateBusCommonSPIMasterCb.h"
#include "bus/env/arm/Nordic/spi/tommRoCHwTemplateBusSPINordicHal.h"
#include "TOMMROCMwTemplate.h"
#include "nrfx_spi.h"
#include <stdbool.h>
#define __DEFAULT_MODE__                (NRF_SPI_MODE_0)
#define __DEFAULT_FREQUENCY__           (NRF_SPI_FREQ_500K)
#define __DEFAULT_SCK_PIN_NUM__         (NRFX_SPI_PIN_NOT_USED)
#define __DEFAULT_MOSI_PIN_NUM__        (NRFX_SPI_PIN_NOT_USED)
#define __DEFAULT_MISO_PIN_NUM__        (NRFX_SPI_PIN_NOT_USED)
#define __EMPTY___tommRoC_hw_spi_master_config_t____    \
{                                                       \
    /* .mode */         __DEFAULT_MODE__,               \
    /* .frequency */    __DEFAULT_FREQUENCY__,          \
    /* .sckPin */       __DEFAULT_SCK_PIN_NUM__,        \
    /* .mosiPin */      __DEFAULT_MOSI_PIN_NUM__,       \
    /* .misoPin */      __DEFAULT_MISO_PIN_NUM__,       \
}
#define __EMPTY___nordic_callback_data_t____            \
{                                                       \
    /* .cbCalled */         false,                      \
    /* .transferResult */   NRFX_ERROR_INTERNAL,        \
}

static tommRoC_hw_err_enum_t _set_sck_pin(
        const   tommRoC_hw_template_bus_spi_master_enum_t           bus,
        const   uint8_t*                                    const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_SPI_MASTER_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_0:
        _spi_master_config_0.sckPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_SPI_MASTER_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_1:
        _spi_master_config_1.sckPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_SPI_MASTER_2_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_2:
        _spi_master_config_2.sckPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

static tommRoC_hw_err_enum_t _set_mosi_pin(
        const   tommRoC_hw_template_bus_spi_master_enum_t           bus,
        const   uint8_t*                                    const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_SPI_MASTER_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_0:
        _spi_master_config_0.mosiPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_SPI_MASTER_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_1:
        _spi_master_config_1.mosiPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_SPI_MASTER_2_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_2:
        _spi_master_config_2.mosiPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

static tommRoC_hw_err_enum_t _set_miso_pin(
        const   tommRoC_hw_template_bus_spi_master_enum_t           bus,
        const   uint8_t*                                    const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_SPI_MASTER_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_0:
        _spi_master_config_0.misoPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_SPI_MASTER_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_1:
        _spi_master_config_1.misoPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_SPI_MASTER_2_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_2:
        _spi_master_config_2.misoPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentSPIMaster0Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_spi_nordic_hal_config_t halConfig;

    halConfig.nrfxSpi.p_reg         = NRF_SPI0;
    halConfig.nrfxSpi.drv_inst_idx  = NRFX_SPI0_INST_IDX;
    halConfig.frequency             = _spi_master_config_0.frequency;
    halConfig.mode                  = _spi_master_config_0.mode;
    halConfig.sckPin                = _spi_master_config_0.sckPin;
    halConfig.mosiPin               = _spi_master_config_0.mosiPin;
    halConfig.misoPin               = _spi_master_config_0.misoPin;
    halConfig.nrfxSpiEvtHandler     = _nrfx_spi0_evt_handler;

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusSPINordicHalMasterInit(&halConfig));

    _spi_master_SPI0_get_callback_ARM(cbFunctPtr);

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&_spi_master_handle_0.nrfxSpi, &halConfig.nrfxSpi, sizeof(nrfx_spi_t)));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentSPIMaster1Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_spi_nordic_hal_config_t halConfig;

    halConfig.nrfxSpi.p_reg         = NRF_SPI1;
    halConfig.nrfxSpi.drv_inst_idx  = NRFX_SPI1_INST_IDX;
    halConfig.frequency             = _spi_master_config_1.frequency;
    halConfig.mode                  = _spi_master_config_1.mode;
    halConfig.sckPin                = _spi_master_config_1.sckPin;
    halConfig.mosiPin               = _spi_master_config_1.mosiPin;
    halConfig.misoPin               = _spi_master_config_1.misoPin;
    halConfig.nrfxSpiEvtHandler     = _nrfx_spi1_evt_handler;

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusSPINordicHalMasterInit(&halConfig));

    _spi_master_SPI1_get_callback_ARM(cbFunctPtr);

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&_spi_master_handle_1.nrfxSpi, &halConfig.nrfxSpi, sizeof(nrfx_spi_t)));

    return TOMMRO_C_HW_ERR_SUCCESS;
}
