==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/esp32/tommRoCHwTemplateBusEnvironmentSPIMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentSPIMaster.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "TOMMROCMw.h"
#include "bus/common/spi/master/tommRoCHwTemplateBusCommonSPIMasterCb.h"
#include "bus/env/esp32/spi/tommRoCHwTemplateBusSPIESP32Hal.h"
#include "soc/gpio_num.h"
#include "driver/gpio.h"
#include "driver/spi_common.h"
#include "driver/spi_master.h"
#include "freertos/FreeRTOS.h"
#define __DEFAULT_MODE__                    (TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_0)
#define __DEFAULT_BAUDRATE__                (500000)
#define __DEFAULT_SCK_IO_NUM__              (GPIO_NUM_NC)
#define __DEFAULT_MISO_IO_NUM__             (GPIO_NUM_NC)
#define __DEFAULT_MOSI_IO_NUM__             (GPIO_NUM_NC)
#define __SPI_DUMMYDATA__                   (0xFF)
#define __SPI_MAX_NO_DMA_DATA_SIZE_BYTE__   (4092)  // Selecting DMA channel limits the amount of bytes transfered to a maximum of 4092.
#define __SPI_0_HOST_DEVICE__               (HSPI_HOST)
#define __SPI_1_HOST_DEVICE__               (VSPI_HOST)
#define __SPI_0_HOST_DEVICE__               (SPI1_HOST)
#define __SPI_1_HOST_DEVICE__               (SPI2_HOST)
#define __SPI_2_HOST_DEVICE__               (SPI3_HOST)

static tommRoC_hw_err_enum_t _set_sck_pin(
        const   tommRoC_hw_template_bus_spi_master_enum_t           bus,
        const   gpio_num_t*                                 const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_SPI_MASTER_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_0:
        _spi_master_config_0.sckGPIONum = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_SPI_MASTER_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_1:
        _spi_master_config_1.sckGPIONum = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

static tommRoC_hw_err_enum_t _set_miso_pin(
        const   tommRoC_hw_template_bus_spi_master_enum_t           bus,
        const   gpio_num_t*                                 const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_SPI_MASTER_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_0:
        _spi_master_config_0.misoGPIONum = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_SPI_MASTER_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_1:
        _spi_master_config_1.misoGPIONum = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

static tommRoC_hw_err_enum_t _set_mosi_pin(
        const   tommRoC_hw_template_bus_spi_master_enum_t           bus,
        const   gpio_num_t*                                 const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_SPI_MASTER_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_0:
        _spi_master_config_0.mosiGPIONum = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_SPI_MASTER_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_1:
        _spi_master_config_1.mosiGPIONum = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentSPIMaster0Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_spi_esp32_hal_config_t halConfig;

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(_write_dummy_buffer, __SPI_DUMMYDATA__, sizeof(_write_dummy_buffer)));

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(&halConfig.spiHostDevice,    0, sizeof(spi_host_device_t)));
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(&halConfig.spiBusConfig,     0, sizeof(spi_bus_config_t)));

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(&_spi_master_handle_0.spiDeviceInterfaceConfig,  0, sizeof(spi_device_interface_config_t)));
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(&_spi_master_handle_0.spiDeviceHandle,           0, sizeof(spi_device_handle_t)));

    halConfig.spiHostDevice                 = __SPI_0_HOST_DEVICE__;
    halConfig.spiBusConfig.mosi_io_num      = (int) _spi_master_config_0.mosiGPIONum;
    halConfig.spiBusConfig.miso_io_num      = (int) _spi_master_config_0.misoGPIONum;
    halConfig.spiBusConfig.sclk_io_num      = (int) _spi_master_config_0.sckGPIONum;
    halConfig.spiBusConfig.quadwp_io_num    = (int) GPIO_NUM_NC;    // GPIO_NUM_NC -> not used
    halConfig.spiBusConfig.quadhd_io_num    = (int) GPIO_NUM_NC;    // GPIO_NUM_NC -> not used
    halConfig.spiBusConfig.max_transfer_sz  = 0;                    // 0 means that max transfer size is 4k bytes
    halConfig.spiBusConfig.intr_flags       = 0;
    halConfig.spiBusConfig.flags            = SPICOMMON_BUSFLAG_MASTER;
    if ((int) GPIO_NUM_NC != (int) _spi_master_config_0.sckGPIONum)     { halConfig.spiBusConfig.flags |= SPICOMMON_BUSFLAG_SCLK; }
    if ((int) GPIO_NUM_NC != (int) _spi_master_config_0.misoGPIONum)    { halConfig.spiBusConfig.flags |= SPICOMMON_BUSFLAG_MISO; }
    if ((int) GPIO_NUM_NC != (int) _spi_master_config_0.mosiGPIONum)    { halConfig.spiBusConfig.flags |= SPICOMMON_BUSFLAG_MOSI; }

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusSPIESP32HalMasterInit(&halConfig));

    _spi_master_handle_0.spiDeviceInterfaceConfig.mode              = _spi_master_mode_enum_to_U8(_spi_master_config_0.mode);
    _spi_master_handle_0.spiDeviceInterfaceConfig.clock_speed_hz    = (int) _spi_master_config_0.baudRate;
    _spi_master_handle_0.spiDeviceInterfaceConfig.spics_io_num      = (int) GPIO_NUM_NC;    // CS pin not used here
    _spi_master_handle_0.spiDeviceInterfaceConfig.queue_size        = 1;

    if (ESP_OK != spi_bus_add_device(__SPI_0_HOST_DEVICE__, &_spi_master_handle_0.spiDeviceInterfaceConfig, &_spi_master_handle_0.spiDeviceHandle)) {
        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }

    _spi_master_SPI0_get_callback_ESP32(cbFunctPtr);

    _spi_master_handle_0.spiHostDevice = halConfig.spiHostDevice;

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentSPIMaster1Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_spi_esp32_hal_config_t halConfig;

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(_write_dummy_buffer, __SPI_DUMMYDATA__, sizeof(_write_dummy_buffer)));

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(&halConfig.spiHostDevice,    0, sizeof(spi_host_device_t)));
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(&halConfig.spiBusConfig,     0, sizeof(spi_bus_config_t)));

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(&_spi_master_handle_1.spiDeviceInterfaceConfig,  0, sizeof(spi_device_interface_config_t)));
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(&_spi_master_handle_1.spiDeviceHandle,           0, sizeof(spi_device_handle_t)));

    halConfig.spiHostDevice                 = __SPI_1_HOST_DEVICE__;
    halConfig.spiBusConfig.mosi_io_num      = (int) _spi_master_config_1.mosiGPIONum;
    halConfig.spiBusConfig.miso_io_num      = (int) _spi_master_config_1.misoGPIONum;
    halConfig.spiBusConfig.sclk_io_num      = (int) _spi_master_config_1.sckGPIONum;
    halConfig.spiBusConfig.quadwp_io_num    = (int) GPIO_NUM_NC;    // GPIO_NUM_NC -> not used
    halConfig.spiBusConfig.quadhd_io_num    = (int) GPIO_NUM_NC;    // GPIO_NUM_NC -> not used
    halConfig.spiBusConfig.max_transfer_sz  = 0;                    // 0 means that max transfer size is 4k bytes
    halConfig.spiBusConfig.intr_flags       = 0;
    halConfig.spiBusConfig.flags            = SPICOMMON_BUSFLAG_MASTER;
    if ((int) GPIO_NUM_NC != (int) _spi_master_config_1.sckGPIONum)     { halConfig.spiBusConfig.flags |= SPICOMMON_BUSFLAG_SCLK; }
    if ((int) GPIO_NUM_NC != (int) _spi_master_config_1.misoGPIONum)    { halConfig.spiBusConfig.flags |= SPICOMMON_BUSFLAG_MISO; }
    if ((int) GPIO_NUM_NC != (int) _spi_master_config_1.mosiGPIONum)    { halConfig.spiBusConfig.flags |= SPICOMMON_BUSFLAG_MOSI; }

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusSPIESP32HalMasterInit(&halConfig));

    _spi_master_handle_1.spiDeviceInterfaceConfig.mode              = _spi_master_mode_enum_to_U8(_spi_master_config_1.mode);
    _spi_master_handle_1.spiDeviceInterfaceConfig.clock_speed_hz    = (int) _spi_master_config_1.baudRate;
    _spi_master_handle_1.spiDeviceInterfaceConfig.spics_io_num      = (int) GPIO_NUM_NC;    // CS pin not used here
    _spi_master_handle_1.spiDeviceInterfaceConfig.queue_size        = 1;

    if (ESP_OK != spi_bus_add_device(__SPI_1_HOST_DEVICE__, &_spi_master_handle_1.spiDeviceInterfaceConfig, &_spi_master_handle_1.spiDeviceHandle)) {
        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }

    _spi_master_SPI1_get_callback_ESP32(cbFunctPtr);

    _spi_master_handle_1.spiHostDevice = halConfig.spiHostDevice;

    return TOMMRO_C_HW_ERR_SUCCESS;
}
